# CryptoGraph

./: .gitignore  sdkconfig.defaults
components/CoinMarketCap/: CMakeLists.txt  CoinMarketCap.cpp
components/CoinMarketCap/include/: CoinMarketCap.hpp
components/OpenWeatherMap/: OpenWeatherMap.cpp
components/SettingsConfig/: SettingsConfig.cpp
components/SettingsConfig/include/: SettingsConfig.hpp
fatfs/crypto/: btc_crypto.json  cg_crypto.json  cmc_crypto.json  crypto.json
main/: CMakeLists.txt  Kconfig.projbuild  gui.hpp  lv_conf.h  main.cpp  main.hpp
main/devices/: conf_ESP32S3_16_8PSRAM.h
main/events/: gui_events.hpp  tux_events.hpp
main/helpers/: helper_display.hpp  helper_spiff.hpp  wifi_prov_mgr.hpp
main/images/: aleph.c  btc.c
main/old/: gui.hpp
ui-config/: btc.c  ui.c  ui.h  ui_helpers.c  ui_helpers.h  ui_img_630538576.c
